--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,21 @@
 spring:
   application:
     name: CLOUD-CONFIG-CLIENT
+    
+# DATA SOURCE SETTING
+datasource.host=localhost
+datasource.port=3309
+datasource.database=farmdeals
+datasource.password=p@55word@#
+
+spring.datasource.url=jdbc:mysql://${datasource.host}:${datasource.port}/${datasource.database}?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=${datasource.password}
+
+# Hibernate properties
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# JPA properties
+spring.jpa.show=true
+spring.jpa.properties.hibernate.format_sql=true
