--- a/application.yml
+++ b/application.yml
@@ -3,14 +3,15 @@ spring:
     name: CLOUD-CONFIG-CLIENT
     
 # DATA SOURCE SETTING
-datasource.host=localhost
-datasource.port=3309
-datasource.database=farmdeals
-datasource.password=p@55word@#
-
-spring.datasource.url=jdbc:mysql://${datasource.host}:${datasource.port}/${datasource.database}?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=${datasource.password}
+datasource:
+    host: localhost
+    port: 3309
+    database: farmdeals
+    password: p@55word@#
+    
+# spring.datasource.url=jdbc:mysql://${datasource.host}:${datasource.port}/${datasource.database}?useSSL=false&serverTimezone=UTC
+# spring.datasource.username=root
+# spring.datasource.password=${datasource.password}
 
 # Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
